--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -6,7 +6,7 @@
 replicaCount: 2
 
 global:
-  host: apps.cluster-96hlt.dynamic.redhatworkshops.io
+  host: apps.cluster-5wj2k.5wj2k.sandbox2112.opentlc.com
   namespace: category
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
