fix: health checks

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -96,11 +96,17 @@ resources:
 livenessProbe:
   httpGet:
     path: /actuator/health/liveness
-    port: http
+    port: 8080
+    scheme: HTTP
+  initialDelaySeconds: 10
+  periodSeconds: 5
 readinessProbe:
   httpGet:
     path: /actuator/health/readiness
-    port: http
+    port: 8080
+    scheme: HTTP
+  initialDelaySeconds: 15
+  periodSeconds: 5
 
 # This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
 autoscaling:
