--- a/gitops/app.yaml
+++ b/gitops/app.yaml
@@ -13,6 +13,10 @@ spec:
                   project: default
                   targetRevision: HEAD
                   valueFile: values-category-dev.yaml
+                - namespace: test
+                  project: default
+                  targetRevision: HEAD
+                  valueFile: values-category-test.yaml
   syncPolicy:
     applicationsSync: create-update
     preserveResourcesOnDeletion: true
