--- a/gitops/app.yaml
+++ b/gitops/app.yaml
@@ -20,7 +20,8 @@ spec:
           - clusters:
               selector:
                 matchLabels:
-                  argocd.argoproj.io/secret-type: in-cluster
+                  argocd.argoproj.io/secret-type: cluster
+                  name: in-cluster
   syncPolicy:
     applicationsSync: create-update
     preserveResourcesOnDeletion: true
