--- a/helm/values-category-dev.yaml
+++ b/helm/values-category-dev.yaml
@@ -134,3 +134,9 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+envs:
+  - name: SPRING_R2DBC_USERNAME
+    value: "test"
+  - name: SPRING_R2DBC_URL
+    value: "r2dbc:postgresql://postgresql:5432/category"
