--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -42,6 +42,11 @@ spec:
                 secretKeyRef:
                   name: postgresql
                   key: database-password
+            - name: SPRING_FLYWAY_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: postgresql
+                  key: database-password
             {{- range .Values.envs }}
             - name: {{ .name }}
               value: {{ .value }}
