--- a/helm/values-category-dev.yaml
+++ b/helm/values-category-dev.yaml
@@ -140,3 +140,7 @@ envs:
     value: "test"
   - name: SPRING_R2DBC_URL
     value: "r2dbc:postgresql://postgresql:5432/category"
+  - name: SPRING_FLYWAY_USERNAME
+    value: "test"
+  - name: SPRING_FLYWAY_URL
+    value: "r2dbc:postgresql://postgresql:5432/category"
