--- a/helm/values-category-dev.yaml
+++ b/helm/values-category-dev.yaml
@@ -110,7 +110,7 @@ readinessProbe:
 
 # This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
 autoscaling:
-  enabled: true
+  enabled: false
   minReplicas: 2
   maxReplicas: 2
   targetCPUUtilizationPercentage: 50
