--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -116,6 +116,14 @@ autoscaling:
   targetCPUUtilizationPercentage: 50
   # targetMemoryUtilizationPercentage: 80
 
+monitoring:
+  enabled: true
+  path: /actuator/prometheus
+  interval: 30s
+  port: http
+  schema: http
+
+
 # Additional volumes on the output Deployment definition.
 volumes: []
 # - name: foo
